test/files/neg/t9834.check
t9834.scala:7: error: value += is not a member of Int
  Expression does not convert to assignment because:
    type mismatch;
     found   : String
     required: Int
    expansion: x.update(x.apply().+("42"))
  x() += "42"
      ^
1 error
